--- a/ph.html
+++ b/ph.html
@@ -324,7 +324,7 @@ const { createApp, ref, onMounted, computed, nextTick } = Vue;
 
 createApp({
     setup() {
-        const FIREBASE_URL = 'https://pharmacy-c58d1-default-rtdb.firebaseio.com/test';
+        const FIREBASE_URL = 'https://pharmacy-c58d1-default-rtdb.firebaseio.com';
         const OCR_API_KEY = 'helloworld'; 
 
         const role = ref('User');
@@ -697,3 +697,4 @@ createApp({
 </script>
 </body>
 </html>
+
